<resources>
    <string name="app_name">Dora</string>
    <string name="reg1">Добро пожаловать в Dora</string>
    <string name="reg2">Введите вашу почту</string>
    <string name="reg31">Ваш аккаунт не был найден. Придумайте пароль</string>
    <string name="buttonSend">Отправить</string>
    <string name="inputPassword">Ваш пароль</string>
    <string name="inputPasswordAgain">Ваш пароль еще раз</string>
    <string name="buttonContinue">Продолжить</string>
    <string name="inputEmail">Ваш e-mail</string>
    <string name="reg32">Введите ваш пароль</string>
    <string name="buttonLogout">Выйти</string>
    <string name="changePassword">Смена пароля</string>
    <string name="oldPassword">Ваш старый пароль</string>
    <string name="newPassword">Ваш новый пароль</string>
    <string name="newPasswordAgain">Ваш новый пароль еще раз</string>
    <string name="applicationHeader">Заявка на обслуживание</string>
    <string name="applicationProblem">Опишите кратко вашу проблему</string>
    <string name="applicationHint">Опишите проблему...</string>
    <string name="serviceCentersList">Список гарантийных центров</string>

    <string name="changePasswordError">Введенные пароли не совпадают</string>
    <string name="showServiceCentres">Посмотреть гарантийные центры</string>
    <string name="showClaimStatus">Статус гарантийной заявки</string>
    <string name="profileHello">Здравствуйте!</string>
    <string name="changePasswordButton">Сменить пароль</string>
    <string name="changePasswordSuccess">Ваш пароль был успешно сменён!</string>
    <string name="warrantiesListHeader">Ваши товары</string>
</resources>