<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/icon_01_2_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@drawable/ic_dora_icon" />

    <TextView
        android:id="@+id/h6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginTop="340dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonSend"
        style="@style/Widget.MaterialComponents.Button"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmail" />
    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>