<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <View
        android:id="@+id/icon_01_2_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@drawable/ic_dora_icon" />

    <TextView
        android:id="@+id/h6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg31"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginTop="315dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/registerButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        android:text="@string/buttonSend"
        style="@style/Widget.MaterialComponents.Button"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/inputPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="462dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/changePasswordLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/inputPasswordAgain" />
    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>